Fix box-shadows: ensure all shadows use colors (not black)
- Changed 3 black shadows to colored: cyan for alt sections, yellow for mistake cards
- Fixed philosophy container shadow from bottom-only (0 16px) to proper right+bottom (16px 16px)
- Changed DON'T section shadow from black to pink
- All borders remain black, all shadows now properly colored (cyan/yellow/pink)
- Maintains neo-brutalist aesthetic: black structure + colored depth

--- a/site/about.html
+++ b/site/about.html
@@ -426,7 +426,7 @@
             border-top: 12px solid #000000;
             border-bottom: 12px solid #000000;
             border-left: 12px solid #FFB3D9;
-            box-shadow: 0 16px 0 #F7E74F;
+            box-shadow: 16px 16px 0 #F7E74F;
         }
 
         .philosophy-container h2 {
@@ -577,7 +577,7 @@
         .char-dont {
             background-color: #FFFFFF;
             color: #000000;
-            box-shadow: 10px 10px 0 #000000;
+            box-shadow: 10px 10px 0 #FFB3D9;
         }
 
         .char-do h4, .char-dont h4 {
@@ -702,7 +702,7 @@
             color: #FFFFFF;
             border: 8px solid #000000;
             padding: 32px;
-            box-shadow: 12px 12px 0 #000000;
+            box-shadow: 12px 12px 0 #F7E74F;
         }
 
         .mistake-card:nth-child(even) {
