--- a/site/designers.html
+++ b/site/designers.html
@@ -396,7 +396,7 @@
         .designer-card-alt .designer-bio h3 {
             color: #000000;
             background-color: #FFFFFF;
-            box-shadow: 6px 6px 0 #000000;
+            box-shadow: 6px 6px 0 #00FFB3;
         }
 
         .designer-bio p {
