--- a/site/history.html
+++ b/site/history.html
@@ -335,7 +335,7 @@
         .timeline-era-alt .timeline-event h3 {
             color: #000000;
             background-color: #FFFFFF;
-            box-shadow: 6px 6px 0 #000000;
+            box-shadow: 6px 6px 0 #00FFB3;
         }
 
         .timeline-event h4 {
