CRITICAL FIX: Sync root directory with site/ directory for GitHub Pages
TECHNICAL DEBT RESOLVED:
- GitHub Pages serves from ROOT directory, not /site/
- Root HTML files were outdated (containing old text-shadows and black box-shadows)
- Copied all updated files from site/ to root directory
- This syncs all previous fixes:
  * Removed 16 text-shadow instances
  * Fixed 5 box-shadow colors (black → cyan/yellow/pink)
  * Fixed bottom-only shadow (0 16px → 16px 16px)
  * White backgrounds + structural borders applied

IMPACT:
- Live site will now reflect all design consistency fixes
- Eliminates dual-maintenance issue going forward
- All pages now show proper neo-brutalist aesthetic

--- a/about.html
+++ b/about.html
@@ -426,7 +426,7 @@
             border-top: 12px solid #000000;
             border-bottom: 12px solid #000000;
             border-left: 12px solid #FFB3D9;
-            box-shadow: 0 16px 0 #F7E74F;
+            box-shadow: 16px 16px 0 #F7E74F;
         }
 
         .philosophy-container h2 {
@@ -434,7 +434,6 @@
             text-align: center;
             margin-bottom: 64px;
             font-size: 64px;
-            text-shadow: 3px 3px 0 #000000;
         }
 
         .philosophy-grid {
@@ -552,7 +551,6 @@
         .char-header h3 {
             margin: 0;
             font-size: 40px;
-            text-shadow: none;
         }
 
         .char-content {
@@ -579,7 +577,7 @@
         .char-dont {
             background-color: #FFFFFF;
             color: #000000;
-            box-shadow: 10px 10px 0 #000000;
+            box-shadow: 10px 10px 0 #FFB3D9;
         }
 
         .char-do h4, .char-dont h4 {
@@ -634,7 +632,6 @@
             margin: 0;
             border-bottom: 8px solid #000000;
             font-size: 48px;
-            text-shadow: none;
         }
 
         .comparison-table {
@@ -705,7 +702,7 @@
             color: #FFFFFF;
             border: 8px solid #000000;
             padding: 32px;
-            box-shadow: 12px 12px 0 #000000;
+            box-shadow: 12px 12px 0 #F7E74F;
         }
 
         .mistake-card:nth-child(even) {
@@ -759,7 +756,6 @@
             text-align: center;
             margin-bottom: 32px;
             font-size: 64px;
-            text-shadow: 3px 3px 0 #000000;
         }
 
         .ux-intro {
@@ -866,7 +862,6 @@
             text-align: center;
             margin-bottom: 64px;
             font-size: 64px;
-            text-shadow: none;
         }
 
         .resources-grid {
