--- a/designers.html
+++ b/designers.html
@@ -356,7 +356,6 @@
         .designer-header h2 {
             margin: 0 0 12px 0;
             font-size: 48px;
-            text-shadow: 2px 2px 0 #000000;
         }
 
         .designer-era {
@@ -397,7 +396,7 @@
         .designer-card-alt .designer-bio h3 {
             color: #000000;
             background-color: #FFFFFF;
-            box-shadow: 6px 6px 0 #000000;
+            box-shadow: 6px 6px 0 #00FFB3;
         }
 
         .designer-bio p {
@@ -484,7 +483,6 @@
             text-align: center;
             margin-bottom: 64px;
             font-size: 64px;
-            text-shadow: 3px 3px 0 #000000;
         }
 
         .threads-grid {
