--- a/history.html
+++ b/history.html
@@ -289,7 +289,6 @@
         .era-header h2 {
             margin: 0;
             font-size: 48px;
-            text-shadow: 2px 2px 0 #000000;
         }
 
         .era-label {
@@ -336,7 +335,7 @@
         .timeline-era-alt .timeline-event h3 {
             color: #000000;
             background-color: #FFFFFF;
-            box-shadow: 6px 6px 0 #000000;
+            box-shadow: 6px 6px 0 #00FFB3;
         }
 
         .timeline-event h4 {
@@ -369,7 +368,6 @@
             text-align: center;
             margin-bottom: 64px;
             font-size: 64px;
-            text-shadow: 3px 3px 0 #000000;
         }
 
         .principles-grid {
