Fix all decorative colored borders to black
BORDERS FIXED (16 instances):
- List item left borders: colored → black
- Heading bottom borders: colored → black
- Section top/bottom borders: colored → black
- Container borders: colored → black

STRUCTURAL BORDERS KEPT (unchanged):
- 12px left pink borders on .timeline-era-alt (section differentiation)
- 12px left pink borders on .designer-card-alt (section differentiation)
- 12px left pink borders on .philosophy-container (section differentiation)
- 12px left pink borders on .phase-alt (section differentiation)

PRINCIPLE: All decorative borders must be black. Only large structural accent borders (12px left borders) can use colors to differentiate sections.

--- a/about.html
+++ b/about.html
@@ -605,7 +605,7 @@
         .char-do li, .char-dont li {
             padding: 12px 16px;
             padding-left: 32px;
-            border-left: 8px solid #00FFB3;
+            border-left: 8px solid #000000;
             margin-bottom: 12px;
             font-size: 16px;
             line-height: 1.5;
@@ -713,7 +713,7 @@
             color: #F7E74F;
             font-size: 20px;
             margin-bottom: 12px;
-            border-bottom: 4px solid #F7E74F;
+            border-bottom: 4px solid #000000;
             padding-bottom: 8px;
         }
 
@@ -731,7 +731,7 @@
         .mistake-why {
             margin-top: 20px;
             padding-top: 20px;
-            border-top: 4px solid #F7E74F;
+            border-top: 4px solid #000000;
             font-style: italic;
             font-weight: bold;
         }
@@ -824,7 +824,7 @@
             font-size: 22px;
             margin-bottom: 16px;
             color: #000000;
-            border-bottom: 4px solid #FFB3D9;
+            border-bottom: 4px solid #000000;
             padding-bottom: 12px;
         }
 
@@ -841,7 +841,7 @@
             font-size: 18px;
             margin-top: 48px;
             padding-top: 48px;
-            border-top: 6px solid #FFFFFF;
+            border-top: 6px solid #000000;
         }
 
         .ux-source a {
