--- a/designers.html
+++ b/designers.html
@@ -428,7 +428,7 @@
         .designer-works li {
             padding: 12px 16px;
             padding-left: 32px;
-            border-left: 8px solid #F7E74F;
+            border-left: 8px solid #000000;
             margin-bottom: 12px;
             font-size: 16px;
             background-color: #F7E74F;
@@ -436,19 +436,19 @@
         }
 
         .designer-card:nth-child(2) .designer-works li {
-            border-left-color: #00FFB3;
+            border-left-color: #000000;
             background-color: transparent;
             color: #000000;
         }
 
         .designer-card:nth-child(3) .designer-works li {
-            border-left-color: #00FFB3;
+            border-left-color: #000000;
             background-color: transparent;
             color: #000000;
         }
 
         .designer-card-alt .designer-works li {
-            border-left-color: #FFFFFF;
+            border-left-color: #000000;
             background-color: #000000;
             color: #FFFFFF;
         }
@@ -456,7 +456,7 @@
         .designer-impact h4 {
             font-size: 22px;
             margin-bottom: 16px;
-            border-bottom: 4px solid #00FFB3;
+            border-bottom: 4px solid #000000;
             padding-bottom: 8px;
         }
 
@@ -514,7 +514,7 @@
             color: #000000;
             font-size: 28px;
             margin-bottom: 16px;
-            border-bottom: 4px solid #FFB3D9;
+            border-bottom: 4px solid #000000;
             padding-bottom: 12px;
         }
 
