--- a/collaboration.html
+++ b/collaboration.html
@@ -430,7 +430,7 @@
 
         .phase-content li {
             padding: 12px 0 12px 32px;
-            border-left: 8px solid #F7E74F;
+            border-left: 8px solid #000000;
             margin-bottom: 12px;
             font-size: 18px;
             line-height: 1.6;
@@ -485,7 +485,7 @@
             font-size: 24px;
             margin-bottom: 20px;
             font-weight: 900;
-            border-bottom: 6px solid #F7E74F;
+            border-bottom: 6px solid #000000;
             padding-bottom: 8px;
         }
 
@@ -698,7 +698,7 @@
         .conclusion-box {
             background-color: #000000;
             color: #FFFFFF;
-            border: 12px solid #F7E74F;
+            border: 12px solid #000000;
             padding: 64px;
             box-shadow: 20px 20px 0 #00FFB3;
         }
