--- a/history.html
+++ b/history.html
@@ -399,7 +399,7 @@
             color: #000000;
             font-size: 24px;
             margin-bottom: 24px;
-            border-bottom: 4px solid #FFB3D9;
+            border-bottom: 4px solid #000000;
             padding-bottom: 12px;
         }
 
