Change all colored section header backgrounds to white
BACKGROUNDS CHANGED:
- .era-header: yellow/cyan/pink → white
- .designer-header: yellow/cyan → white
- .char-header: yellow/cyan → white
- .phase-header: yellow → white
- All section/container backgrounds that were colored → white

PRINCIPLE: Neo-brutalism uses white/black backgrounds. Colors reserved for:
- Borders (12px structural left borders only)
- Box-shadows (depth indicators)
- Small accent elements

This removes visual noise and maintains clean, honest aesthetic.

--- a/designers.html
+++ b/designers.html
@@ -325,7 +325,7 @@
         }
 
         .designer-header {
-            background-color: #F7E74F;
+            background-color: #FFFFFF;
             color: #000000;
             padding: 32px 48px;
             border-bottom: 8px solid #000000;
@@ -335,21 +335,21 @@
         }
 
         .designer-card:nth-child(2) .designer-header {
-            background-color: #00FFB3;
+            background-color: #FFFFFF;
             color: #000000;
         }
 
         .designer-card:nth-child(3) .designer-header {
-            background-color: #00FFB3;
+            background-color: #FFFFFF;
         }
 
         .designer-card:nth-child(5) .designer-header {
-            background-color: #FFB3D9;
+            background-color: #FFFFFF;
             color: #000000;
         }
 
         .designer-card:nth-child(7) .designer-header {
-            background-color: #00FFB3;
+            background-color: #FFFFFF;
             color: #000000;
         }
 
