--- a/about.html
+++ b/about.html
@@ -539,13 +539,13 @@
         }
 
         .char-header {
-            background-color: #F7E74F;
+            background-color: #FFFFFF;
             padding: 32px 48px;
             border-bottom: 8px solid #000000;
         }
 
         .char-section:nth-child(even) .char-header {
-            background-color: #00FFB3;
+            background-color: #FFFFFF;
         }
 
         .char-header h3 {
