--- a/collaboration.html
+++ b/collaboration.html
@@ -369,7 +369,7 @@
         }
 
         .phase-header {
-            background-color: #F7E74F;
+            background-color: #FFFFFF;
             color: #000000;
             padding: 32px 48px;
             border-bottom: 8px solid #000000;
@@ -381,7 +381,7 @@
         }
 
         .phase-alt .phase-header {
-            background-color: #00FFB3;
+            background-color: #FFFFFF;
         }
 
         .phase-header h3 {
