--- a/history.html
+++ b/history.html
@@ -260,7 +260,7 @@
         }
 
         .era-header {
-            background-color: #F7E74F;
+            background-color: #FFFFFF;
             color: #000000;
             padding: 32px 48px;
             border-bottom: 8px solid #000000;
@@ -272,17 +272,17 @@
         }
 
         .timeline-era-alt .era-header {
-            background-color: #00FFB3;
+            background-color: #FFFFFF;
             color: #000000;
             border-bottom-color: #000000;
         }
 
         .timeline-era:nth-child(3) .era-header {
-            background-color: #00FFB3;
+            background-color: #FFFFFF;
         }
 
         .timeline-era:nth-child(5) .era-header {
-            background-color: #FFB3D9;
+            background-color: #FFFFFF;
             color: #000000;
         }
 
