Change all pink structural left borders to black
FINAL BORDER FIX:
- .timeline-era-alt: pink left border → black
- .designer-card-alt: pink left border → black
- .philosophy-container: pink left border → black
- .phase-alt: pink left border → black

ALL BORDERS NOW BLACK. Only colored elements:
- Box-shadows (depth/3D effect)
- Text/backgrounds where needed for contrast

Pure neo-brutalist structure.

--- a/about.html
+++ b/about.html
@@ -425,7 +425,7 @@
             margin-right: -48px;
             border-top: 12px solid #000000;
             border-bottom: 12px solid #000000;
-            border-left: 12px solid #FFB3D9;
+            border-left: 12px solid #000000;
             box-shadow: 16px 16px 0 #F7E74F;
         }
 
