--- a/collaboration.html
+++ b/collaboration.html
@@ -365,7 +365,7 @@
         .phase-alt {
             background-color: #FFFFFF;
             color: #000000;
-            border-left: 12px solid #FFB3D9;
+            border-left: 12px solid #000000;
         }
 
         .phase-header {
