--- a/designers.html
+++ b/designers.html
@@ -321,7 +321,7 @@
         .designer-card-alt {
             background-color: #FFFFFF;
             color: #000000;
-            border-left: 12px solid #FFB3D9;
+            border-left: 12px solid #000000;
         }
 
         .designer-header {
