--- a/history.html
+++ b/history.html
@@ -256,7 +256,7 @@
         .timeline-era-alt {
             background-color: #FFFFFF;
             color: #000000;
-            border-left: 12px solid #FFB3D9;
+            border-left: 12px solid #000000;
         }
 
         .era-header {
