Restore colored backgrounds to section headers
REVERTED: Section header backgrounds back to yellow/cyan/pink
- .era-header: yellow/cyan/pink alternating
- .designer-header: yellow/cyan/pink alternating
- .char-header: yellow/cyan alternating
- .phase-header: yellow/cyan alternating

FINAL STATE:
✓ All borders: BLACK
✓ Section headers: COLORED backgrounds
✓ Box-shadows: COLORED (depth effect)

This provides visual rhythm and section differentiation while maintaining structural clarity.

--- a/about.html
+++ b/about.html
@@ -539,13 +539,13 @@
         }
 
         .char-header {
-            background-color: #FFFFFF;
+            background-color: #F7E74F;
             padding: 32px 48px;
             border-bottom: 8px solid #000000;
         }
 
         .char-section:nth-child(even) .char-header {
-            background-color: #FFFFFF;
+            background-color: #00FFB3;
         }
 
         .char-header h3 {
