--- a/designers.html
+++ b/designers.html
@@ -325,7 +325,7 @@
         }
 
         .designer-header {
-            background-color: #FFFFFF;
+            background-color: #F7E74F;
             color: #000000;
             padding: 32px 48px;
             border-bottom: 8px solid #000000;
@@ -335,21 +335,21 @@
         }
 
         .designer-card:nth-child(2) .designer-header {
-            background-color: #FFFFFF;
+            background-color: #00FFB3;
             color: #000000;
         }
 
         .designer-card:nth-child(3) .designer-header {
-            background-color: #FFFFFF;
+            background-color: #00FFB3;
         }
 
         .designer-card:nth-child(5) .designer-header {
-            background-color: #FFFFFF;
+            background-color: #FFB3D9;
             color: #000000;
         }
 
         .designer-card:nth-child(7) .designer-header {
-            background-color: #FFFFFF;
+            background-color: #00FFB3;
             color: #000000;
         }
 
